# facts-experiment-builder

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTOR_DOCS.md  EXPERIMENT-COMPOSE-OVERVIEW.md  EXPERIMENT-CONFIG-OVERVIEW.md  FACTS_GLOSSARY.md  LICENSE  QUICKSTART.md  README.md  index.html  justfile  mkdocs.yml  module_input_data_downloads.md  pyproject.toml  setup.md  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci.yml  test.yml
contributing/adding-a-module/: index.html
contributing/module-yaml-reference/: index.html
contributing/overview/: index.html
docs/: index.md
docs/contributing/: adding-a-module.md  module-yaml-reference.md  overview.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: architecture.md  command_flow.md
docs/user-guide/: experiment-metadata.md  generate-compose.md  list-modules.md  modules.md  overview.md  setup-new-experiment.md
experiments/esl_experiment/: experiment-compose.yaml  experiment-metadata.yml
experiments/facts_experiment/: experiment-compose.yaml  experiment-config.yaml
experiments/larmip_exp/: experiment-compose.yaml  experiment-metadata.yml
experiments/my_first_experiment/: experiment-compose.yaml  experiment-config.yaml
experiments/my_total_exp/: experiment-compose.yaml  experiment-metadata.yml
experiments/test_experiment/: experiment-compose.yaml  experiment-metadata.yml
experiments/toy_experiment/: experiment-compose.yaml  experiment-metadata.yml
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/architecture/: index.html
reference/command_flow/: index.html
scripts/: generate_readme_svgs.py
search/: search_index.json
src/facts_experiment_builder/adapters/: abstract_adapter.py  adapter_utils.py  compose_service_writer.py  experiment_metadata_to_service_spec.py  module_adapter.py  module_defaults_adapter.py  module_implementation.py  source_resolver.py
src/facts_experiment_builder/application/: experiment_builder.py  experiment_runner.py  generate_compose.py  metadata_schema.py  module_builders.py  path_validator.py  setup_experiment.py  setup_new_experiment.py
src/facts_experiment_builder/cli/: __init__.py  generate_compose_cli.py  list_modules_cli.py  parsers.py  setup_experiment_cli.py  theme.py  (+1 more)
stylesheets/: lapaz.css
tests/: test_cli_parsers.py  test_generate_compose.py  test_module_name_validation.py  test_setup_new_experiment_cli.py  test_theme.py  test_typed_paths.py
tests/integration/: conftest.py  test_setup_experiment_cli.py  test_setup_new_experiment_cli.py
tests/unit/: conftest.py  test_facts_module.py  test_generate_compose.py  test_module_loader.py  test_module_name_validation.py  test_module_registry.py  test_module_schema.py  test_module_schema_outputs.py  test_setup_experiment.py  test_setup_experiment_cli.py  test_setup_new_experiment.py  test_setup_new_experiment_cli.py  test_theme.py  test_typed_paths.py
user-guide/experiment-metadata/: index.html
user-guide/generate-compose/: index.html
user-guide/list-modules/: index.html
user-guide/modules/: index.html
user-guide/overview/: index.html
user-guide/setup-new-experiment/: index.html
v2_experiments/my_facts_experiment/: README.md  v2-compose.yaml  v2-experiment-metadata.yml
(+129 files in other folders)
