[project]
name = "facts-experiment-builder"
version = "0.1.0"
description = "FACTS experiment builder for creating and managing FACTS v2 experiments"
readme = "README.md"
authors = [
    { name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "dask>=2026.1.2",
    "jinja2>=3.1.6",
    "netcdf4>=1.7.3",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "xarray>=2025.12.0",
]

[project.scripts]
facts-experiment-builder = "facts_experiment_builder.cli.cli:main"
setup-new-experiment = "facts_experiment_builder.cli.setup_new_experiment_cli:main"
setup-new-experiment-jinja2 = "facts_experiment_builder.cli.setup_new_experiment_jinja2_cli:main"
generate-compose = "facts_experiment_builder.cli.generate_compose_cli:main"
list-modules = "facts_experiment_builder.cli.list_modules_cli:list_modules"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
